--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "license": "ISC",
   "repository": {
     "type" : "git",
-    "url" : "https://github.com/npm/cli.git"
+    "url" : "https://github.com/gutomarconi/nodeapi.git"
   },
   "devDependencies": {
     "@types/express": "^4.16.1",
